--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Cantine</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+
+  <ion-menu swipeGesture="true" side="start" menuId="first" type="overlay" contentId="main">
+    <ion-header>
+      <ion-toolbar translucent>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item>
+          <!-- <ion-icon name="archive" slot="start"></ion-icon> -->
+          <!-- <ion-label>Picture</ion-label> -->
+          <a [routerLink]="['/home/menu']">Menu</a>
+        </ion-item>
+        <ion-item>
+          <a [routerLink]="['/home/picture']">Picture</a>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
