--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
   <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button><ion-icon name="reorder-four-outline"></ion-icon></ion-menu-button>
       </ion-buttons>
-      <ion-title>Cantine</ion-title>
+      <ion-title>Cantine
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -18,17 +19,32 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item>
-          <!-- <ion-icon name="archive" slot="start"></ion-icon> -->
-          <!-- <ion-label>Picture</ion-label> -->
-          <a [routerLink]="['/home/menu']">Menu</a>
-        </ion-item>
-        <ion-item>
-          <a [routerLink]="['/home/picture']">Picture</a>
-        </ion-item>
+        <ion-menu-toggle auto-hide="true">
+          <ion-item [routerLink]="['/home/menu']" routerDirection="forward">
+              <ion-icon name="fast-food-outline" slot="start"></ion-icon>
+              Menu
+          </ion-item>
+          <ion-item [routerLink]="['/home/picture']" routerDirection="forward">
+            <ion-icon name="camera-outline" slot="start"></ion-icon>
+              Picture
+          </ion-item>
+          <ion-item [routerLink]="['/home/login']" routerDirection="forward">
+            <ion-icon name="log-in-outline" slot="start"></ion-icon>
+              Log in
+          </ion-item>
+          <ion-item [routerLink]="['/home/protected']" routerDirection="forward">
+            <ion-icon name="warning-outline" slot="start"></ion-icon>
+              Protected Route
+          </ion-item>
+          <ion-item [routerLink]="['/home/anotherprotected']" routerDirection="forward">
+            <ion-icon name="warning-outline" slot="start"></ion-icon>
+              Another Protected Route
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
 
+  
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
