--- a/src/app/components/picture/picture.component.html
+++ b/src/app/components/picture/picture.component.html
@@ -12,6 +12,17 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
+
+  <ion-grid>
+    <ion-row>
+    <ion-col size="6" 
+      *ngFor="let photo of photoService.photos; index as position">
+        <ion-img [src]="photo.webviewPath"></ion-img>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="addPhotoToGallery()">
       <ion-icon name="camera"></ion-icon>
