--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,10 @@
             <ion-icon name="warning-outline" slot="start"></ion-icon>
               Another Protected Route
           </ion-item>
+          <ion-item [routerLink]="['/home/localisation']" routerDirection="forward">
+            <ion-icon name="warning-outline" slot="start"></ion-icon>
+              Geolocation
+          </ion-item>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
